# aimashi

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: README.md
docs/references/: library_audit_report.md  open_source_projects.md
docs/research/: 01_feasibility_report_python.md  02_python_library_survey.md  03_requirements_v0.2.md  04_development_plan.md  05_library_deep_analysis.md  06_requirements_v0.3.md
scripts/: gen_test_dicom.py  gen_test_dicom_v2.py
src/: __init__.py  main.py
src/registration/: manual_registration.py  transform_utils.py
src/utils/: export.py  test_data.py
src/viewer/: dicom_loader.py  main_window.py  mpr_viewer.py
