[project]
name = "multimodal-medical-viewer"
version = "0.1.0"
description = "多模态医学影像手动配准浏览器 - Python桌面端"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.7",
    "vtk>=9.4",
    "SimpleITK>=2.4",
    "pydicom>=3.1",
    "numpy>=1.26",
    "scipy>=1.14",
    "scikit-image>=0.25",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
